# neura

./: '  .gitignore  Cargo.toml  notes.txt  setup.py
neura.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: __init__.py  main.rs
src/core/: __init__.py  mod.rs  ops.rs  tensor.py  tensor.rs
src/core/engine/: __init__.py  autograd.py
src/core/tensors/: __init__.py  init_strategies.py  tensor.py
src/tensor/: mod.rs  ops.rs  tensor.rs  tensor_builder.rs
test/: ops_tests.rs  tensor_tests.rs
tests/: tensor_builder_tests.rs  tensor_ops_tests.rs  tensor_tests.rs  test_tensor.py
tests/tensor/: test_tensor_init.py  test_tensor_ops.py
