[package]
name = "neura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
rayon = "1.8"

[[test]]
name = "tensor_tests"
path = "test/tensor_tests.rs"
harness = true

[[test]]
name = "ops_tests"
path = "test/ops_tests.rs"
harness = true
